corrections to the notebook

--- a/4 Normas_deter.ipynb
+++ b/4 Normas_deter.ipynb
@@ -752,7 +752,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8f423faf10>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fef3bbacf50>"
       ]
      },
      "execution_count": 7,
@@ -1012,7 +1012,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8f428194d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fef3bcfb950>"
       ]
      },
      "execution_count": 10,
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1055,79 +1055,41 @@
       "text/plain": [
        "array([[ 9.05410535e-03,  8.56006267e-01, -3.94155805e-01,\n",
        "         1.13983595e-01,  1.90777678e-01, -3.16788430e-02,\n",
-       "         1.61142607e-01, -7.69977241e-02,  3.27571689e-02,\n",
-       "         2.67755545e-04, -2.65087699e-02, -1.27378498e+00,\n",
-       "        -5.85045184e-02],\n",
+       "        -7.69977241e-02, -2.65087699e-02, -1.27378498e+00],\n",
        "       [ 8.56006267e-01,  1.82522818e+02, -4.26687307e+01,\n",
        "         3.06851304e+01,  2.89282778e+01,  1.04254846e+01,\n",
-       "         2.95643310e+01,  1.77169334e+00,  1.41302151e+01,\n",
-       "         1.87082208e+00, -3.66191795e+00, -1.09018547e+02,\n",
-       "        -5.90297798e+00],\n",
+       "         1.77169334e+00, -3.66191795e+00, -1.09018547e+02],\n",
        "       [-3.94155805e-01, -4.26687307e+01,  1.98453884e+02,\n",
        "         7.93855493e+00, -2.92027940e+01, -3.08790827e+01,\n",
-       "        -1.50340794e+01,  3.71038273e+01, -2.48855336e-01,\n",
-       "        -2.41542905e+00, -1.08855530e-01,  4.77571422e+02,\n",
-       "         2.51289588e+01],\n",
+       "         3.71038273e+01, -1.08855530e-01,  4.77571422e+02],\n",
        "       [ 1.13983595e-01,  3.06851304e+01,  7.93855493e+00,\n",
        "         1.40777562e+02,  7.38391389e+01,  1.72609285e+00,\n",
-       "         9.93378796e+01,  6.69887156e+01,  6.30918778e+01,\n",
-       "         4.81351086e+00,  1.88925144e+00,  6.13272355e+02,\n",
-       "         7.86763181e+00],\n",
+       "         6.69887156e+01,  1.88925144e+00,  6.13272355e+02],\n",
        "       [ 1.90777678e-01,  2.89282778e+01, -2.92027940e+01,\n",
        "         7.38391389e+01,  7.01760879e+01,  1.79932488e+01,\n",
-       "         7.15464444e+01,  3.67045500e+00,  4.05984383e+01,\n",
-       "         4.41547484e+00,  1.63550609e+00,  4.27556879e+02,\n",
-       "         3.36816619e-01],\n",
+       "         3.67045500e+00,  1.63550609e+00,  4.27556879e+02],\n",
        "       [-3.16788430e-02,  1.04254846e+01, -3.08790827e+01,\n",
        "         1.72609285e+00,  1.79932488e+01,  8.14877048e+01,\n",
-       "         1.17543134e+01, -1.62202011e+01,  1.89333988e+01,\n",
-       "         7.66955200e+00,  4.01738854e+00, -2.62651965e+01,\n",
-       "        -2.08148023e+00],\n",
-       "       [ 1.61142607e-01,  2.95643310e+01, -1.50340794e+01,\n",
-       "         9.93378796e+01,  7.15464444e+01,  1.17543134e+01,\n",
-       "         8.22439164e+01,  2.77950690e+01,  4.91740758e+01,\n",
-       "         4.56427109e+00,  1.73186637e+00,  4.98670954e+02,\n",
-       "         3.21024587e+00],\n",
+       "        -1.62202011e+01,  4.01738854e+00, -2.62651965e+01],\n",
        "       [-7.69977241e-02,  1.77169334e+00,  3.71038273e+01,\n",
        "         6.69887156e+01,  3.67045500e+00, -1.62202011e+01,\n",
-       "         2.77950690e+01,  6.35299475e+01,  2.25365135e+01,\n",
-       "         4.04778869e-01,  2.57254457e-01,  1.85089175e+02,\n",
-       "         7.52799137e+00],\n",
-       "       [ 3.27571689e-02,  1.41302151e+01, -2.48855336e-01,\n",
-       "         6.30918778e+01,  4.05984383e+01,  1.89333988e+01,\n",
-       "         4.91740758e+01,  2.25365135e+01,  3.35049311e+01,\n",
-       "         3.92691602e+00,  1.82511863e+00,  3.09740740e+02,\n",
-       "         3.48738932e+00],\n",
-       "       [ 2.67755545e-04,  1.87082208e+00, -2.41542905e+00,\n",
-       "         4.81351086e+00,  4.41547484e+00,  7.66955200e+00,\n",
-       "         4.56427109e+00,  4.04778869e-01,  3.92691602e+00,\n",
-       "         8.84007887e-01,  4.44091479e-01,  2.08524142e+01,\n",
-       "         9.44246916e-02],\n",
+       "         6.35299475e+01,  2.57254457e-01,  1.85089175e+02],\n",
        "       [-2.65087699e-02, -3.66191795e+00, -1.08855530e-01,\n",
        "         1.88925144e+00,  1.63550609e+00,  4.01738854e+00,\n",
-       "         1.73186637e+00,  2.57254457e-01,  1.82511863e+00,\n",
-       "         4.44091479e-01,  3.52088732e-01,  1.47788155e+01,\n",
-       "         2.25247210e-01],\n",
+       "         2.57254457e-01,  3.52088732e-01,  1.47788155e+01],\n",
        "       [-1.27378498e+00, -1.09018547e+02,  4.77571422e+02,\n",
        "         6.13272355e+02,  4.27556879e+02, -2.62651965e+01,\n",
-       "         4.98670954e+02,  1.85089175e+02,  3.09740740e+02,\n",
-       "         2.08524142e+01,  1.47788155e+01,  5.39145322e+03,\n",
-       "         9.44614567e+01],\n",
-       "       [-5.85045184e-02, -5.90297798e+00,  2.51289588e+01,\n",
-       "         7.86763181e+00,  3.36816619e-01, -2.08148023e+00,\n",
-       "         3.21024587e+00,  7.52799137e+00,  3.48738932e+00,\n",
-       "         9.44246916e-02,  2.25247210e-01,  9.44614567e+01,\n",
-       "         3.72905528e+00]])"
+       "         1.85089175e+02,  1.47788155e+01,  5.39145322e+03]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "## matriz de covarianzas\n",
-    "m_cov = np.cov(df_X,rowvar=False)\n",
+    "m_cov = np.cov(df_X[[item for item in df_X.columns if not(item in highly_correlated)]],rowvar=False)\n",
     "m_cov"
    ]
   },
@@ -1146,7 +1108,7 @@
     {
      "data": {
       "text/plain": [
-       "6249.124276796214"
+       "6128.762366140804"
       ]
      },
      "execution_count": 12,
@@ -1163,7 +1125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Como se puede observar, existe una alta variabilidad en el conjunto de datos, pues se observa que la varianza total es 6249.12"
+    "Como se puede observar, existe una alta variabilidad en el conjunto de datos, pues se observa que la varianza total es 6128.76"
    ]
   },
   {
@@ -1175,16 +1137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "114.43795572724956"
+       "5989029.95601421"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,7 +1160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El conjunto de datos, presenta una varianza generalizada de 114.44"
+    "El conjunto de datos, presenta una varianza generalizada de 5989029.95"
    ]
   },
   {
