--- a/6.1 PCA.ipynb
+++ b/6.1 PCA.ipynb
@@ -1,6 +1,252 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Análisis de Componentes Principales (PCA)\n",
+    "\n",
+    " \n",
+    "\n",
+    "\n",
+    "## Introducción \n",
+    "\n",
+    " \n",
+    "\n",
+    "Cuando se realiza un analisis a través de los datos, el primer acercamiento con el que nos enfrentamos es la recolección o construcción de estos, de tal forma que apunten al objetivo del análisis y lo más frecuente siempre es que se extraigan la mayor cantidad de varibles posibles, con el fin de obtener mucha más precisión frente a las conclusiones que se saquen acerca del tema que se esta tratando. Sin embargo, el hecho de tomar tantas variables que me ayudan a explicar el tema tratado me puede causar diferentes problemas:\n",
+    "\n",
+    " \n",
+    "\n",
+    "- Por un lado, puede llevar a problemas computacionales por tener dimesiones demasiado grandes para ejecutar diferente metodologías.\n",
+    "\n",
+    " \n",
+    "\n",
+    "- Además que al tener tantas variables en el conjunto de datos suele presentarse mucha correlación entre ellas, ya que pueden estar midiendo lo mismo, por lo que termina siendo necesario el calculo de demasiados coeficientes de correlación, haciendo más compleja la visualización de estas relaciones. \n",
+    "\n",
+    " \n",
+    "\n",
+    "Dadas estas problemáticas, se hace necesaria la búsqueda de técnicas o metodologías que permitan seleccionar un conjunto de variables menor de tal forma que obtengamos la mayor información sobre la tematica que se esta trabajando. Para este caso se desarrollará un análisis de componentes principales sobre las variables númericas de nuestro set de datos, con el fin de reducir el número de variables y obtener la mayor variabilidad de estos.\n",
+    "\n",
+    " \n",
+    "\n",
+    "\n",
+    "## Definición\n",
+    "\n",
+    " \n",
+    "\n",
+    "Es un método estadístico que permite simplificar la complejidad de espacios muestrales con muchas dimensiones a la vez que conserva su información. Supóngase que existe una muestra con $n$ individuos cada uno con $p$ variables $(X1, X2, …, Xp)$, es decir, el espacio muestral tiene $p$ dimensiones. PCA permite encontrar un número de factores subyacentes $(z<p)$ que explican aproximadamente lo mismo que las $p$ variables originales. Donde antes se necesitaban $p$ valores para caracterizar a cada individuo, ahora bastan $z$ valores. Cada una de estas $z$ nuevas variables recibe el nombre de componente principal.\n",
+    "\n",
+    " \n",
+    "\n",
+    "\n",
+    "### Algebra para el cálculo de las componentes\n",
+    "\n",
+    " \n",
+    "\n",
+    "Para el calculo de las componentes principales se hace uso de los conceptos matemáticos de *valores y vectores propios*. Los vectores propios traducen la información de la matriz original en la multiplicación de valores y una constante. Los valores propios son esta constante que multiplica los vectores propios y que participa en la transformación lineal de la matriz original. \n",
+    "\n",
+    " \n",
+    "\n",
+    "- **Vectores Propios:** Los vectores propios son conjuntos de elementos que mediante la multiplicación de una constante cualquiera, son equivalentes con la multiplicación de la matriz original y los conjuntos de elementos.   \n",
+    "\n",
+    " \n",
+    "\n",
+    "    Matemáticamente, un vector propio $V=(v_1,…,v_n)$ de una matriz cuadrada $Q$ es cualquier vector $V$ que satisface la siguiente expresión para cualquier constante $h$: \n",
+    "\n",
+    " \n",
+    "\n",
+    "$$QV = hV$$\n",
+    "\n",
+    " \n",
+    "\n",
+    "- **Valores Propios:** La constante $h$ es el valor propio que pertenece al vector propio $V$.\n",
+    "\n",
+    " \n",
+    "\n",
+    " Los valores propios son las raíces reales (raíces que tienen como solución números reales) que encontramos mediante la ecuación característica. \n",
+    " \n",
+    "### Proceso para obtener las componentes principales.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Dado un conjunto de datos $(x_1,x_2,...,x_p)$, se desea calcular un nuevo conjunto de datos $(y_1,y_2,...,y_p)$, cuyas varianzas vayan decreciendo, cada $y_j$ es una combinación lineal normalizada de las $x_1,x_2,...,x_p$, así:\n",
+    "\n",
+    " \n",
+    "\n",
+    "$$y_j= a_{j1}x_1 +a_{j2}x_2 +...+a_p{jp}x_1 = a_j'x $$\n",
+    "\n",
+    " \n",
+    "\n",
+    "Donde $a_j'$ es un vector de constantes y \n",
+    "\n",
+    " \n",
+    "\n",
+    "$x=\\begin{pmatrix}\n",
+    "x_1 \\\\\n",
+    "...\\\\\n",
+    "x_p  \n",
+    "\\end{pmatrix}$\n",
+    "\n",
+    " \n",
+    "\n",
+    "Que la combinación lineal sea normalizada significa que:\n",
+    "\n",
+    " \n",
+    "\n",
+    "$$\n",
+    "\\sum_{i=1}^{p}a_{ij}^2=1 \n",
+    "$$\n",
+    "\n",
+    " \n",
+    "\n",
+    "El primer componente se calcula eligiendo $a_1$ de modo que $y_1$ tenga la mayor varianza posible, sujeta a la restricción de que $a'a = 1$. El segundo componente principal se calcula \n",
+    "obteniendo $a_2$ de modo que la variable obtenida, $y_2$ no este correlacionada con $y_1$.\n",
+    "\n",
+    " \n",
+    "\n",
+    "*Extracción de los componentes principales*\n",
+    "\n",
+    " \n",
+    "\n",
+    "1. **Estandarización de los datos:** El proceso de PCA identifica aquellas direcciones en las que la varianza es mayor. Como la varianza de una variable se mide en su misma escala elevada al cuadrado, si antes de calcular las componentes no se estandarizan todas las variables para que tengan media 0 y desviación estándar 1, aquellas variables cuya escala sea mayor dominarán al resto. De ahí que sea recomendable estandarizar siempre los datos.\n",
+    "\n",
+    " \n",
+    "\n",
+    "\n",
+    "2. **Detección de datos atípicos:** Dado que PCA trabaja con la varianza y esta es muy sencible a datos atípicos, por ello es importante antes de aplicar la ténica, realizar un análisis de estos.\n",
+    "\n",
+    " \n",
+    "\n",
+    "\n",
+    "3. **Cálculo Matriz de Covarianzas:** Al tener el conjunto de datos preparados para iniciar a calcular los componentes, se debe calcular la matriz de varianzas y covarianzas, ya que esta es una matriz cuadrada y simétrica, se pueden obtener sus vectores y valores propios.\n",
+    "\n",
+    " \n",
+    "\n",
+    "\n",
+    "4. **Cálculo de vectores y valores propios:** Sobre la matriz de covarianzas se procede calculan los valores y vectores propios. Finalmente los vectores propios ordenados de mayor a menor valor propio serán las componentes principales. \n",
+    "\n",
+    " \n",
+    "\n",
+    "\n",
+    "5. **Generación Componentes Principales:** Los componentes $y$ (en total $p$) se expresan como el producto de la matriz formada por los autovectores multiplicada por el conjunto de datos transpuesto que tiene las variables originales $x_1,x_2,...,x_p$\n",
+    "\n",
+    " \n",
+    "\n",
+    "$$y=Ax$$\n",
+    "\n",
+    " \n",
+    "\n",
+    "donde \n",
+    "\n",
+    " \n",
+    "\n",
+    "$y=\\begin{pmatrix}\n",
+    "y_1 \\\\\n",
+    "...\\\\\n",
+    "y_p  \n",
+    "\\end{pmatrix}$, \n",
+    "\n",
+    " \n",
+    "\n",
+    "A: Vectores propios ordenados de mayor a menor valor propio.\n",
+    "\n",
+    " \n",
+    "\n",
+    "$A=\\begin{pmatrix}\n",
+    "a_{11} & a_{12} & ... & a_{1p}  \\\\\n",
+    "a_{21} & a_{22} & ... & a_{2p}  \\\\\n",
+    "... & & &\\\\\n",
+    "a_{p1} & a_{p2} & ... & a_{pp}\n",
+    "\\end{pmatrix},x=\\begin{pmatrix}\n",
+    "x_1 \\\\\n",
+    "...\\\\\n",
+    "x_p  \n",
+    "\\end{pmatrix},$\n",
+    "\n",
+    " \n",
+    "\n",
+    "\n",
+    "Como $$Var(y_1)= \\lambda_1$$ $$Var(y_2)= \\lambda_2$$ $$...$$ $$Var(y_p)= \\lambda_p$$\n",
+    "\n",
+    " \n",
+    "\n",
+    "entonces la matriz de covarianzas de $y$ es:\n",
+    "\n",
+    " \n",
+    "\n",
+    "\n",
+    "$$cov(y)=\\begin{pmatrix}\n",
+    "\\lambda_1 & 0 & 0& 0  \\\\\n",
+    "0 &\\lambda_2 & 0& 0  \\\\\n",
+    "0 & 0&...&0&\\\\\n",
+    "0 & 0 &  0 & \\lambda_p\n",
+    "\\end{pmatrix},$$\n",
+    "\n",
+    " \n",
+    "\n",
+    "ya que $y_1,y_2,...,y_p$ se han construido como variables no correlacionadas.\n",
+    "\n",
+    " \n",
+    "\n",
+    "### Variabilidad\n",
+    "\n",
+    " \n",
+    "\n",
+    "Luego de calcular las componentes principales, es necesario, analizar la proporción de varianza que explica cada componente, ya que esta variación acumulada es útil para decidir el número de componentes con el que se proseguirá en el análisis.\n",
+    "\n",
+    " \n",
+    "\n",
+    "- La varianza total de los componenetes, se puede calcular de la siguiente manera:\n",
+    "\n",
+    " \n",
+    "\n",
+    "$$\n",
+    "\\sum_{i=1}^{p}Var(y_i)=\\sum_{i=1}^{p}\\lambda_i=traza(A) \n",
+    "$$\n",
+    "\n",
+    " \n",
+    "\n",
+    "- La proporción de varianza total que recuge un componente principal, será:\n",
+    "\n",
+    " \n",
+    "\n",
+    "$$\n",
+    "\\frac{\\lambda_i}{\\sum_{i=1}^{p}\\lambda_i}*100 \n",
+    "$$\n",
+    "\n",
+    " \n",
+    "\n",
+    "- La proporción de varianza acumulada por las primera m componentes:\n",
+    "\n",
+    " \n",
+    "\n",
+    "$$\n",
+    "\\frac{\\sum_{i=1}^{m}\\lambda_i}{\\sum_{i=1}^{p}\\lambda_i}*100 \n",
+    "$$\n",
+    "\n",
+    " \n",
+    "\n",
+    "### Número óptimo de componentes principales\n",
+    "\n",
+    " \n",
+    "\n",
+    "En el análisis de componentes principales tenemos como objetivo reducir la cantidad de variables en el conjunto de datos, por lo que es importante seleccionar el número óptimo de componentes que suele ser la cantidad mínima de componentes que sean suficientes para explicar la variabilidad de los datos, no existe una técnica específica para realizar la elección. \n",
+    "\n",
+    " \n",
+    "\n",
+    "Dado un conjunto de datos de dimensiones $n x p$, el número de componentes principales que se pueden calcular es como máximo $p$, una forma común de calcular la cantidad óptima de componentes consiste en evaluar la proporción de varianza explicada acumulada y seleccionar el número de componentes mínimo a partir del cual el incremento ya no es significativo.\n",
+    "\n",
+    " \n",
+    "\n",
+    "![image.png](attachment:image.png)\n",
+    "\n",
+    " \n",
+    "\n",
+    "\n",
+    "### Componentes Principales sobre nuestro set de datos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
