--- a/9.2 Regresion Lineal.ipynb
+++ b/9.2 Regresion Lineal.ipynb
@@ -6,30 +6,46 @@
    "source": [
     "# Regresión Lineal\n",
     "\n",
+    " \n",
     "\n",
+    " \n",
     "\n",
     "## Introducción\n",
     "\n",
+    " \n",
+    "\n",
     "Los modelo de regresión lineal múltiple estudian la relación entre una variable de interés $Y$  la cual conoceremos como la variable respuesta o dependiente y un conjunto de variables explicativas o regresoras denotadas $X1, X2, . . . , Xp$.\n",
+    "\n",
+    " \n",
     "\n",
     "En el modelo de regresión lineal múltiple se supone que la función de regresión que relaciona la variable dependiente con las variables independientes es lineal, es decir:\n",
     "\n",
-    "$$ Y = β_0 + β_1X_1 + β_2X_2 + · · · + β_pX_p + ε $$\n",
+    " \n",
+    "\n",
+    "$$ Y = \\beta_0 + \\beta_1X_1 + \\beta_2X_2 + · · · + \\beta_pX_p + \\epsilon $$\n",
+    "\n",
+    " \n",
     "\n",
     "Donde: \n",
-    "- $β_0$ es el término independiente. Es el valor esperado de $Y$ cuando $X_1, . . . , X_p$ son cero.\n",
-    "- $β_1, β_2, . . ., β_p$ son los coeficientes parciales de la regresión:\n",
-    "    - $β_1$ mide el cambio en $Y$ por cada cambio unitario en $X_1$, manteniendo $X_2, X_3, . . . , X_p$ constantes.\n",
-    "    - $β_2$ mide el cambio en $Y$ por cada cambio unitario en $X_2$, manteniendo $X_2, X_3, . . . , X_p$ constantes.\n",
+    "- $\\beta_0$ es el término independiente. Es el valor esperado de $Y$ cuando $X_1, . . . , X_p$ son cero.\n",
+    "- $\\beta_1, \\beta_2, . . ., \\beta_p$ son los coeficientes parciales de la regresión:\n",
+    "    - $\\beta_1$ mide el cambio en $Y$ por cada cambio unitario en $X_1$, manteniendo $X_2, X_3, . . . , X_p$ constantes.\n",
+    "    - $\\beta_2$ mide el cambio en $Y$ por cada cambio unitario en $X_2$, manteniendo $X_2, X_3, . . . , X_p$ constantes.\n",
     "    - ...\n",
-    "    - $β_p$ mide el cambio en $Y$ por cada cambio unitario en $X_p$ , manteniendo $X_2, X_3, . . . , X_{p-1}$ constantes.\n",
+    "    - $\\beta_p$ mide el cambio en $Y$ por cada cambio unitario en $X_p$ , manteniendo $X_2, X_3, . . . , X_{p-1}$ constantes.\n",
     "- $ε$ es el error de observación debido a variables no controladas.\n",
     "\n",
+    " \n",
+    "\n",
     "El objetivo será obtener a partir de la muestra estimadores:\n",
-    "- De los coeficientes $\\hat{β_0}, \\hat{β_1}, . . . , \\hat{β_p}$\n",
+    "- De los coeficientes $\\hat{\\beta_0}, \\hat{\\beta_1}, . . . , \\hat{\\beta_p}$\n",
     "- De la varianza del error $\\hat{σ^2}.$\n",
     "\n",
+    " \n",
+    "\n",
     "La información muestral se verá de la siguiente manera:\n",
+    "\n",
+    " \n",
     "\n",
     "$$\\begin{pmatrix}\n",
     "y_{11} & x_{12} & ... & x_{1p}  \\\\\n",
@@ -38,7 +54,11 @@
     "y_{n1} & x_{n2} & ... & x_{np}\n",
     "\\end{pmatrix}$$\n",
     "\n",
+    " \n",
+    "\n",
     "Matricialmente el modelo de regresión lineal multiple se puede expresar de la siguiente manera:\n",
+    "\n",
+    " \n",
     "\n",
     "$$\\begin{pmatrix}\n",
     "y_{11}\\\\\n",
@@ -51,10 +71,10 @@
     "... & &\\\\\n",
     "x_{n2} & ... & x_{np}\n",
     "\\end{pmatrix}  .  \\begin{pmatrix} \n",
-    "β_0\\\\\n",
-    "β_1\\\\\n",
+    "\\beta_0\\\\\n",
+    "\\beta_1\\\\\n",
     "...\\\\\n",
-    "β_p \n",
+    "\\beta_p \n",
     "\\end{pmatrix} + \\begin{pmatrix}\n",
     "ε1\\\\\n",
     "ε2\\\\\n",
@@ -62,41 +82,77 @@
     "εn\n",
     "\\end{pmatrix} $$\n",
     "\n",
+    " \n",
+    "\n",
     "Asignando la notación a las matrices anteriores, la expresión anterior se podrá escribir:\n",
-    "$$Y = Xβ + ε$$\n",
+    "$$Y = X\\beta + \\epsilon$$\n",
+    "\n",
+    " \n",
     "\n",
     "- Utilizando mínimos cuadrados para estimar el vector de parámetros $β$, se tiene que el estimador es:\n",
     "\n",
-    "$$ \\hat{β} = (X^t X)^{−1}X^tY $$\n",
+    " \n",
+    "\n",
+    "$$ \\hat{\\beta} = (X^t X)^{−1}X^tY $$\n",
     "donde $X^t$ denota a la matriz transpuesta de $X$.\n",
+    "\n",
+    " \n",
     "\n",
     "- El estimador de la varianza del error se puede definir como:\n",
     "\n",
-    "$$ σ^2 = \\frac{1}{n − (p + 1)} \\sum_{i=1}^{n} ε^2 = \\frac{1}{n − (p + 1)} \\sum_{i=1}^{n}(y_i − \\hat{y_i})^2$$\n",
+    " \n",
+    "\n",
+    "$$ σ^2 = \\frac{1}{n − (p + 1)} \\sum_{i=1}^{n} \\epsilon^2 = \\frac{1}{n − (p + 1)} \\sum_{i=1}^{n}(y_i − \\hat{y_i})^2$$\n",
+    "\n",
+    " \n",
     "\n",
     "Descomposición de la variabilidad\n",
     "\n",
+    " \n",
+    "\n",
     "- La varibilidad toda la muestra se denomina variabilidad total (VT).\n",
+    "\n",
+    " \n",
     "\n",
     "$$ VT=\\sum_{i=1}^{n}(y_i − \\bar{y_i})^2$$\n",
     "\n",
+    " \n",
+    "\n",
     "Tambien es posible descomponerla en dos sumandos:\n",
+    "\n",
+    " \n",
     "\n",
     "- La variabilidad explicada (VE), dado por la regresión con p grados de libertad.\n",
     "\n",
+    " \n",
+    "\n",
     "$$ VE=\\sum_{i=1}^{n}(\\hat{y_i} − \\bar{y_i})^2$$\n",
+    "\n",
+    " \n",
     "\n",
     "- La variabilidad no explicada (VNE , dado por los residuales con n-(p+1) grados de libertad\n",
     "\n",
+    " \n",
+    "\n",
     "$$ VNE=\\sum_{i=1}^{n}(y_i − \\hat{y_i})^2$$\n",
+    "\n",
+    " \n",
     "\n",
     "Finalmente,\n",
     "\n",
+    " \n",
+    "\n",
     "$$VT= VE+VNE$$ con n-1 grados de libertad \n",
+    "\n",
+    " \n",
     "\n",
     "## Significancia e intervalo de confianza para los $β's$\n",
     "\n",
+    " \n",
+    "\n",
     "Luego de calcular el modelo es importante validar si realmente esta siendo explicativo, es decir, las variables explicativas si tienen algún efecto sobre la variable respuesta. Esto se realiza mediante pruebas de hipotesis, luego de verificar que se cumplan los supuestos del modelo.\n",
+    "\n",
+    " \n",
     "\n",
     "$$\n",
     "\\left\\{\n",
@@ -107,11 +163,19 @@
     "\\right.\n",
     "$$\n",
     "\n",
+    " \n",
+    "\n",
     "- Si no rechazamos la hipótesis nula el modelo no es explicativo, es decir, ninguna variables explicativa influye en la variable respuesta $Y$.\n",
+    "\n",
+    " \n",
     "\n",
     "- Si rechazmos la hipótesis nula, el modelo es explicativo, es decir, al menos una de las variables explicativa influye en la variable respuesta $Y$.\n",
     "\n",
+    " \n",
+    "\n",
     "Y finalmente se necesitará determinar cual es el conjunto de variables explicativas: $x_1, x_2, …, x_k$, que influyen en la variable dependiente $Y$, al igual que anterirmente se realiza la prueba de hipótesis para cada coeficiente $_\\beta$\n",
+    "\n",
+    " \n",
     "\n",
     "$$\n",
     "\\left\\{\n",
@@ -122,40 +186,72 @@
     "\\right.\n",
     "$$\n",
     "\n",
+    " \n",
+    "\n",
     "\n",
     "## Residuos del modelo\n",
     "\n",
+    " \n",
+    "\n",
     "El residuo de una estimación se define como la diferencia entre el valor observado y el valor esperado acorde al modelo. \n",
+    "\n",
+    " \n",
     "\n",
     "Cuanto mayor es el sumatorio del cuadrado de los residuos menor la precisión con la que el modelo puede predecir el valor de la variable dependiente a partir de la variable predictora. Los residuos son muy importantes puesto que en ellos se basan las diferentes medidas de la bondad de ajuste del modelo.\n",
     "\n",
+    " \n",
+    "\n",
     "## Bondad de ajuste del modelo\n",
+    "\n",
+    " \n",
     "\n",
     "Una vez que se ha ajustado un modelo es necesario verificar su eficiencia, ya que aun siendo la línea que mejor se ajusta a las observaciones de entre todas las posibles, el modelo puede ser malo. Para este caso haremos uso del \n",
     "*coeficiente de determinación* $R^2$.\n",
     "\n",
+    " \n",
+    "\n",
     "**Coeficiente de determinación** $R^2$: Describe la proporción de variabilidad observada en la variable dependiente $Y$ explicada por el modelo y relativa a la variabilidad total. Su valor está acotado entre 0 y 1.\n",
+    "\n",
+    " \n",
     "\n",
     "$$R^2= \\frac{VE}{VT} = 1-\\frac{VNE}{VT}$$\n",
     "\n",
+    " \n",
+    "\n",
     "El coeficiente de determinación presenta el inconveniente de aumentar siempre que aumenta el número de variables regresoras, por ello se introduce una penalización del número de variables regresoras que se incluyen en el modelo de regresión, es conveniente utilizar el coeficiente de determinación corregido por el número de grados de libertad.\n",
+    "\n",
+    " \n",
     "\n",
     "$$ R^2_{ajustado}=1- \\frac{VNE/(n-(p+1))}{VT/(n-1)}$$\n",
     "\n",
+    " \n",
+    "\n",
     "## Supuestos para la regresión lineal\n",
+    "\n",
+    " \n",
     "\n",
     "- **Linealidad**: La relación entre las variables explicativas debe ser lineal. \n",
     "\n",
+    " \n",
+    "\n",
     "- **Distribución Normal de los residuos**: Los residuos se tiene que distribuir de forma normal, con media igual a 0. Esto se puede comprobar con un histograma, con la distribución de cuantiles (qqnorm() + qqline()) o con un test de hipótesis de normalidad. Los valores extremos suelen ser una causa frecuente por la que se viola la condición de normalidad.\n",
+    "\n",
+    " \n",
     "\n",
     "\n",
     "- **Varianza de residuos constante** (homocedasticidad): La varianza de los residuos ha de ser aproximadamente constante a lo largo del eje X. Se puede comprobar mediante gráficos (scatterplot) de los residuos de cada observación (formas cónicas son un claro indicio de falta de homocedasticidad) o mediante contraste de hipótesis mediante el test de Breusch-Pagan.\n",
     "\n",
+    " \n",
+    "\n",
     "\n",
     "- **Valores atípicos y de alta influencia**: Hay que estudiar con detenimiento los valores atípicos o extremos ya que pueden generar una falsa correlación que realmente no existe, u ocultar una existente. (Ver descripción detallada en la sección de apuntes varios).\n",
     "\n",
+    " \n",
+    "\n",
     "\n",
     "- **Independencia, Autocorrelación**: Las observaciones deben ser independientes unas de otras. Esto es importante tenerlo en cuenta cuando se trata de mediciones temporales. Puede detectarse estudiando si los residuos siguen un patrón o tendencia. Otro caso frecuente es el de tener varias mediciones para un mismo sujeto. En estos casos, primero se obtiene la media de cada uno y después se ajusta el modelo empleando las medias.\n",
+    "\n",
+    " \n",
     "\n",
     "Dado que las condiciones se verifican a partir de los residuos, primero se suele generar el modelo y después se valida. De hecho, el ajuste de un modelo debe verse como un proceso iterativo en el que se ajusta un modelo inicial, se evalúa mediante sus residuos y se mejora. Así hasta llegar a un modelo óptimo."
    ]
@@ -691,7 +787,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
